fixed broken image and recipe styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ a:hover {
 /* media query fr smaller screens */
 @media screen and (max-width: 800px) {
   .section-heading {
-    /* font-size: 1.5rem; */
+    font-size: 1.5rem;
     width: 70%;
   }
 
