--- a/src/styles/recipe.css
+++ b/src/styles/recipe.css
@@ -123,7 +123,7 @@
 @media screen and (max-width: 768px) {
   .drink-card {
     width: 20rem;
-    margin-top: .5rem;
+    /* margin-top: .5rem; */
     margin-bottom: 0rem;
   }
   .recipe-cont {
